# skillchef

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/skillchef/: __init__.py  cli.py  config.py  llm.py  merge.py  remote.py  store.py  ui.py  wizard.py
src/skillchef/commands/: __init__.py  common.py  cook_cmd.py  flavor_cmd.py  init_cmd.py  inspect_cmd.py  list_cmd.py  remove_cmd.py  serve_cmd.py  sync_cmd.py
test/skills/code-reviewer/scripts/: lint_check.py
test/skills/hello-chef/: SKILL.md
tests/: conftest.py  test_cli.py  test_common.py  test_config.py  test_cook_cmd.py  test_e2e_cli.py  test_flavor_cmd.py  test_init_cmd.py  test_inspect_cmd.py  test_list_cmd.py  test_llm.py  test_merge.py  test_remote.py  test_serve_cmd.py  test_store.py  test_sync_cmd.py  test_ui.py
tests/skills/code-reviewer/: SKILL.md
tests/skills/hello-chef/: SKILL.md
