[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillchef"
version = "0.2.5"
description = "pyenv + git for agent skills. Cook, flavor, and sync skills from any source."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.2",
    "httpx>=0.28.1",
    "tomli-w>=1.2.0",
    "litellm>=1.81.11",
    "questionary>=2.1.0",
]

[project.scripts]
skillchef = "skillchef.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]
dev = [
    "ruff>=0.12.0",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "E402"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/skillchef"]
